--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">NoisyGlobe</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="sound_level">Sound Level</string>
+    <string name="longitude">Longitude</string>
+    <string name="latitude">Longitude</string>
+    <string name="no_text"></string>
 
 </resources>
