--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="sound_level">Sound Level</string>
     <string name="longitude">Longitude</string>
-    <string name="latitude">Longitude</string>
+    <string name="latitude">Latitude</string>
     <string name="no_text"></string>
 
 </resources>
